@@ -1,3 +1,7 @@
+2002-02-12  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* w3m.el (w3m-async-exec): Default to nil under MacOS X.
+
 2002-02-12  Hideyuki SHIRAI  <shirai@meadowy.org>
 
 	* w3m-e21.el (w3m-setup-favicon): Fix handling of
